# ChangeLog for sci-physics/rivet
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*rivet-2.1.1 (06 May 2014)

  06 May 2014; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +rivet-2.1.1.ebuild:
  sci-physics/rivet: Added doxygen generated docs