@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*rivet-2.1.2 (05 Sep 2014)
+
+  05 Sep 2014; Jauhien Piatlicki <jauhien@gentoo.org> +rivet-2.1.2.ebuild:
+  version bump
+
 *rivet-2.1.1 (06 May 2014)
 
   06 May 2014; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
